# simplify_text

./: .gitignore  README.md  app.py  main.py  main_4_1_mini.py  main_o3_mini.py  prompts.py  pyproject.toml  requirements.txt  simplifier.py  startup.txt  test_simplifier.py
.github/workflows/: master_text-simplifier(01).yml  master_text-simplifier.yml
templates/: index.html
